# OpenPy3D

./: .pre-commit-config.yaml  OpenPy3d.pyproj  README.md  main-pip.py  main.py  openpy3d.py  openpy3d.spec  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml  python-publish.yml
OpenPy3d_Ztrolix.egg-info/: PKG-INFO  requires.txt  top_level.txt
scripts/: close.vbs  console.py  new.py  pythonup.py  updater.bat
src/OpenPy3D_Ztrolix/: OpenPy3d.sln
src/OpenPy3D_Ztrolix/scripts/: cube.py  cubeplus.py  open.py  piramid.py  sphere.py  updater.bat
src/OpenPy3d_Ztrolix.egg-info/: SOURCES.txt
