[metadata]
name = Ztrolix
version = 0.0.1
author = ArcticTechnology
author_email = arctic.technology.mail@gmail.com
license = MIT
description = OpenPy3D Is a Python PIP package that you can create 3D objects in Python really easy with.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = starter, package, template
url = https://github.com/Ztrolix/OpenPy3D
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	Intended Audience :: Financial and Insurance Industry
	Topic :: Education
	Topic :: Software Development
	Topic :: Software Development :: Libraries

[options]
install_requires =
	requests>=2.27.1
	alive-progress>=3.1.4
	certifi>=2022.12.7
	charset-normalizer>=3.0.1
	colorama>=0.4.6
	grapheme>=0.6.0
	idna>=3.4
	Pillow>=10.0.0
	pygame>=2.5.1
	pyglet>=2.0.dev23
	PyOpenGL>=3.1.7
	requests>=2.31.0
	tqdm>=4.64.1
	urllib3>=1.26.14
	zipp>=3.12.0

python_requires = >=3.11
package_dir = =src
packages = find:

[options.packages.find]
where = src